# foroactivo-discord-monitor

./: .env.example  .gitignore  QUICKSTART.md  README.md  pyproject.toml  state.json
.github/workflows/: monitor.yml
config/: threads.example.json  threads.json
src/: __init__.py  discord_notifier.py  foroactivo_client.py  monitor.py  state_manager.py
tests/: __init__.py
